# pipeline-observability

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
configs/alloy/: config.alloy
configs/grafana/dashboards/: flow_dashboard.json  main_dashboard.json  specific_flow_dashboard.json
configs/grafana/provisioning/: datasources.yaml
configs/prometheus/: prometheus.yaml
configs/tempo/: tempo-local.yaml
projects/common/: pyproject.toml
projects/common/src/common/: log.py  prefect_utils.py  prom.py  settings.py  tracing.py
projects/flows/: pyproject.toml
projects/flows/src/flows/: a_flow.py  dinky.py  start.sh
projects/poller/: pyproject.toml
projects/poller/src/poller/: server.py  start.sh
projects/receiver/: pyproject.toml
projects/receiver/src/receiver/: server.py  start.sh
