[project]
name = "flows"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Samuel Hinton", email = "samuelreay@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "common",
    "prefect>=3.2.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flows"]

[tool.uv.sources]
common = { workspace = true }
